unpackaged/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <label>Offers</label>
    <nameField>
        <displayFormat>Offer {00000}</displayFormat>
        <label>Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>