unpackaged/main/default/objects/Offer__c/fields/Additional_Funding__c.field-meta.xml
<CustomField>
    <fullName>Additional_Funding__c</fullName>
    <formula>Payback_Amount__c  * 0.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>