unpackaged/main/default/objects/Offer__c/fields/Amount_Advanced__c.field-meta.xml
<CustomField>
    <fullName>Amount_Advanced__c</fullName>
    <label>Amt Advanced</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>