unpackaged/main/default/objects/Offer__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission*</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>