unpackaged/main/default/objects/Offer__c/fields/Conditional_Position_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Position_Email_Template__c</fullName>
    <formula>IF(ISPICKVAL(Position__c, "1st"),"This offer is based on this deal funding as a 1st position offer.",
IF(ISPICKVAL(Position__c, "2nd"),"This offer is based on this deal funding as a 2nd position offer.",
IF(ISPICKVAL(Position__c, "3rd"),"This offer is based on this deal funding as a 3rd position offer.",
" "
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conditional Position (Email Template)</label>
    <type>Text</type>
</CustomField>