unpackaged/main/default/objects/Offer__c/fields/Daily_Holdback__c.field-meta.xml
<CustomField>
    <fullName>Daily_Holdback__c</fullName>
    <label>Holdback</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>