unpackaged/main/default/objects/Offer__c/fields/Factor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Factor_Rate__c</fullName>
    <label>Rate</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>