unpackaged/main/default/objects/Offer__c/fields/Lender_Fees__c.field-meta.xml
<CustomField>
    <fullName>Lender_Fees__c</fullName>
    <label>Lender Fees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>