unpackaged/main/default/objects/Offer__c/fields/Merchant_Net__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Net__c</fullName>
    <formula>Amount_Advanced__c  -  Lender_Fees__c - PSF_Charged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Net</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>