unpackaged/main/default/objects/Offer__c/fields/Net_Funded__c.field-meta.xml
<CustomField>
    <fullName>Net_Funded__c</fullName>
    <formula>Amount_Advanced__c -  PSF_Charged__c -  Lender_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>