unpackaged/main/default/objects/Offer__c/fields/Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments__c</fullName>
    <label># payments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>