unpackaged/main/default/objects/Offer__c/fields/Payback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payback_Amount__c</fullName>
    <label>Payback Amt</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>