unpackaged/main/default/objects/Offer__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
            <value>
                <fullName>6th</fullName>
            </value>
            <value>
                <fullName>7th</fullName>
            </value>
            <value>
                <fullName>8th</fullName>
            </value>
            <value>
                <fullName>9th</fullName>
            </value>
            <value>
                <fullName>10th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>