unpackaged/main/default/objects/Offer__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>