unpackaged/main/default/objects/Offer__c/fields/PSF_Charged__c.field-meta.xml
<CustomField>
    <fullName>PSF_Charged__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PSF</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>