unpackaged/main/default/objects/Offer__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Months</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>