unpackaged/main/default/objects/Offer__c/fields/Total_Commision__c.field-meta.xml
<CustomField>
    <fullName>Total_Commision__c</fullName>
    <formula>PSF_Charged__c +  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Comission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>