unpackaged/main/default/objects/Offer__c/fields/Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions__c</fullName>
    <formula>Commission__c +  PSF_Charged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>