unpackaged/main/default/objects/Offer__c/fields/Weeks__c.field-meta.xml
<CustomField>
    <fullName>Weeks__c</fullName>
    <label>Weeks</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>