unpackaged/main/default/objects/Offer__c/validationRules/Factor_Rate_or_Payback_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Factor_Rate_or_Payback_Amount</fullName>
    <active>true</active>
    <description>Ensures that only one of the two fields have a value either Rate or Payback Amt, not both.</description>
    <errorConditionFormula>AND (
ISPICKVAL(Type__c, 'Daily'), 
ISNEW(),
NOT(ISBLANK(Payback_Amount__c)),
NOT(ISBLANK(Factor_Rate__c))
)</errorConditionFormula>
    <errorMessage>Only one of the the two fields can have a value: Payback Amt OR Rate.</errorMessage>
</ValidationRule>