unpackaged/main/default/objects/Offer__c/validationRules/Holdback_and_Daily_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Holdback_and_Daily_Payment</fullName>
    <active>true</active>
    <description>This won't allow a offer that has a Holdback Amount to be given a Daily payment.</description>
    <errorConditionFormula>AND (   
 ISPICKVAL(Type__c, 'Daily'),
 NOT(ISBLANK(Daily_Holdback__c)),
 NOT(ISBLANK(Daily_Payment__c ))
)</errorConditionFormula>
    <errorMessage>In order to add a Holdback amount, Payment must to blank.
In order to add Payment amount, holdback must be blank.</errorMessage>
</ValidationRule>