unpackaged/main/default/objects/Offer__c/validationRules/Only_Allows_Number_of_Payments_OR_Paymen.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Allows_Number_of_Payments_OR_Paymen</fullName>
    <active>true</active>
    <description>Ensures that only one of the following fields has a value upon creation, # Payments OR Payment</description>
    <errorConditionFormula>AND ( 
 ISPICKVAL(Type__c, 'Daily'),
 ISNEW(), 
 NOT(ISBLANK(Number_of_Payments__c)), 
 NOT(ISBLANK(Daily_Payment__c)) 
)</errorConditionFormula>
    <errorMessage>Only one of the the two fields can have a value: Payment OR # Payments.</errorMessage>
</ValidationRule>